Fix infinite horizontal scroll by capping max-width and fixing pseudo-elements

--- a/src/components/styles/Work.css
+++ b/src/components/styles/Work.css
@@ -24,10 +24,10 @@
 }
 .work-flex {
   width: fit-content;
+  max-width: calc(600px * 4 + 80px * 8 - 80px);
   display: flex;
   height: auto;
   margin-left: -80px;
-  padding-right: 120px;
   position: relative;
   overflow-x: auto;
   overflow-y: hidden;
@@ -45,19 +45,21 @@
   gap: 50px;
   justify-content: start;
 }
+.work-box:last-child {
+  border-right: none;
+}
 .work-flex .work-box:nth-child(even) {
   flex-direction: column-reverse;
 }
 .work-flex::before,
 .work-flex::after {
   content: "";
-  width: calc(50000vw);
+  width: 100%;
   height: 1px;
   background-color: #363636;
   position: absolute;
-  left: 50%;
+  left: 0;
   top: 0;
-  transform: translateX(-50%);
 }
 .work-flex::after {
   top: 100%;
